--- a/flashcards/templates/flashcards/index.html
+++ b/flashcards/templates/flashcards/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>{{flashcard.question}}</h1>
-    <p>{{flashcard.answer}}</p>
+    
+    <form action="{% url 'flashcards:check_answer' flashcard.id %}" method="post">
+      {% csrf_token %}
+      <input type="text" name="answer">
+      <input type="submit" value="Check">
+    </form>
   </body>
 </html>
